opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_traverse"
bug-reports: "https://github.com/janestreet/ppx_traverse/issues"
dev-repo: "git+https://github.com/janestreet/ppx_traverse.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ppxlib"                  {>= "v0.11.0"}
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "1.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Automatic generation of open-recursion classes

Ppx\\_traverse is a ppx_type_conv plugin generating open recursion
classes from type definition.
"
